# viva

./: .gitignore  README.md  pyproject.toml
playground/: TestDatasetSpeed.py  cluster_blendshapes.py  test_blendshapes.py  train_blendshapes.py  vad_test.py
tests/: TestNormalizeLandmarkBatch.py
viva/: __main__.py
viva/audio/: SileroVAD.py  SileroVADWorkerPool.py  VADModels.py  WhisperWorkerPool.py  whisper.py
viva/data/: AVPreProcessor.py  AudioVisionPreProcessor.py  FaceLandmarkDataset.py  FaceLandmarkSeries.py  VideoPreProcessor.py  face_landmark_io.py  zarr_io.py
viva/data/augmentations/: BaseLandmarkAugmentation.py  CollapseLabels.py  FilterLandmarkIndices.py  FlattenLandmarks.py  NormalizeLandmarks.py  OneHotEncodeLabels.py  RandomNoiseAugmentation.py  RandomSizeAugmentation.py
viva/data/pre_processor/: AudioVisionPreProcessor.py  VideoPreProcessor.py
viva/models/: ImprovedTCNLandmarkClassifier.py  LSTMLandmarkClassifier.py  SimpleMLPClassifier.py  TCNLandmarkClassifier.py  TransformerLandmarkClassifier.py
viva/modes/: DatasetMode.py  DemoMode.py  ExportMode.py  InspectMode.py  PreProcessMode.py  TrainMode.py  VideoEncode.py  VivaBaseMode.py
viva/strategies/: BaseTrainStrategy.py  BlockStrategy.py
viva/utils/: FocalLoss.py  RangeMap.py  RollingBuffer.py  path_utils.py
viva/vision/: FaceMeshEstimatorPool.py  landmark_utils.py  vision_utils.py
viva/worker/: BaseWorker.py  BaseWorkerPool.py  Future.py
