[project]
name = "viva"
version = "0.1.0"
description = "Visual voice activation detection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpegio>=0.10.0.post0",
    "lightning>=2.4.0",
    "nncf>=2.14.1",
    "onnx>=1.17.0",
    "onnxsim>=0.4.36",
    "openvino>=2024.6.0",
    "rich>=13.9.4",
    "sortedcontainers>=2.4.0",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.5.1",
    "visiongraph[mediapipe]~=1.0.1.2",
    "zarr>=2.18.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
